<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/signIn"
            android:textColor="#1B1919"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroupCheckUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonNormalUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/normalMember" />

            <RadioButton
                android:id="@+id/radioButtonTutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_shape"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signInName"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/accountEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="한글로작성바랍니다"
                    android:inputType="text"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/accountEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="179dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/accountTextBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="생년월일 6자리"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/accountEditTextBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="1999년 09월 09일 → 990909"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor,TextFields"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="179dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/accountEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor,TextFields"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="179dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textCheckPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordCheck"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/accountEditTextCheckPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor,TextFields"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="179dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneNumber"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/accountEditTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputPhoneNumberHint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    tools:ignore="TextFields" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forTutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textLicence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/licence"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toRightOf="@+id/imageLicence"
                        app:layout_constraintTop_toTopOf="@+id/imageLicence"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/imageLicence"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/corner_shape"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/baseline_card_membership_black_36dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/accountButtonAttach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/postPicture"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="15"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accountButtonSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/backGroundTopBar"
            android:text="등록하기"
            android:textSize="22sp"
            android:textColor="#F3F2F5"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />
    </LinearLayout>
</LinearLayout>